--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "author": "Erin Carver <agcarvr@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9"
   },
   "scripts": {
